<resources>
    <string name="app_name">BinaryVeda-Kotlin</string>
    <string name="lorem_ipsum_nis_used">lorem ipsum\nis used</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit</string>
    <string name="lorem_ipsum_2">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco</string>
    <string name="content_copyright_reserved">Content Copyright reserved.</string>
    <string name="privacy_policy">Privacy Policy.</string>
    <string name="disclaimers">Disclaimers.</string>
    <string name="affiliattions">Affiliattions.</string>
    <string name="reach_us">Reach Us.</string>
    <string name="team">Team.</string>
    <string name="about_us">About Us.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="my_dashboard">My dashboard</string>
    <string name="john_doe">john.doe</string>
    <string name="edit">Edit</string>
    <string name="upload">Upload</string>
    <string name="add_icon">add icon</string>
    <string name="hamburger_icon">hamburger icon</string>
    <string name="logo">logo</string>
    <string name="profile">profile</string>
    <string name="user_avatar">user avatar</string>
    <string name="upload_icon">upload icon</string>
    <string name="edit_icon">edit icon</string>
    <string name="_2_3k">2.3K</string>
    <string name="followers">Followers</string>
    <string name="_50">50</string>
    <string name="artworks">Artworks</string>
    <string name="_21">21</string>
    <string name="exhibitions">Exhibitions</string>
    <string name="_120">120</string>
    <string name="heart_icon">heart icon</string>
    <string name="_43k">43K</string>
    <string name="cursor_icon">cursor icon</string>
    <string name="_2_3k">2.3K</string>
    <string name="share_icon">share icon</string>
    <string name="pallette">pallette</string>
    <string name="logo">logo</string>
    <string name="image">image</string>
    <string name="arrow">arrow</string>
    <string name="register">register</string>
    <string name="me_as_a_collector">me as a collector</string>
    <string name="track_my_application">track my application</string>
    <string name="facebook">facebook</string>
    <string name="instagram">instagram</string>
    <string name="agc_image">agc image</string>
    <string name="image">image</string>
</resources>