<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/item_image_vector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/image_margin_start"
        tools:src="@drawable/ic_image1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:contentDescription="@string/logo" />

    <TextView
        android:id="@+id/item_image_title"
        android:layout_width="201dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/image_title_margin_start"
        android:layout_marginTop="@dimen/image_title_margin_top"
        android:fontFamily="@font/barlow_condensed_light"
        tools:text="@string/lorem_ipsum_nis_used"
        android:textColor="@color/black"
        android:textSize="28sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_image_vector" />

    <TextView
        android:id="@+id/item_image_sub_title"
        android:layout_width="0dp"
        android:layout_height="189dp"
        android:layout_marginStart="@dimen/image_subtext_margin_start"
        android:layout_marginTop="@dimen/image_subtext_margin_top"
        android:layout_marginEnd="@dimen/image_subtext_margin_end"
        android:alpha="0.49"
        android:fontFamily="@font/barlow_extra_light"
        tools:text="@string/lorem_ipsum_2"
        android:textColor="@color/black"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_image_title" />

</androidx.constraintlayout.widget.ConstraintLayout>